--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:title" content="ChripDown">
+  <meta property="og:description"
+    content="ChripDown - A place to express yourself freely. No limits, no censorship, just real conversations.">
+  <meta property="og:image" content="https://chripdown.vercel.app/banner.png">
+  <meta property="og:url" content="https://chripdown.vercel.app">
+  <meta property="og:type" content="website">
+
   <link rel="icon" type="image/svg+xml" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ChripDown</title>
