--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta property="og:title" content="ChripDown">
   <meta property="og:description"
     content="ChripDown - A place to express yourself freely. No limits, no censorship, just real conversations.">
-  <meta property="og:image" content="https://chripdown.vercel.app/banner.png">
+  <meta property="og:image" content="https://chripdown.vercel.app/preview.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:url" content="https://chripdown.vercel.app">
   <meta property="og:type" content="website">
